add websocket to project
